# m0g3507-bootloader

./: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  boot.c  boot.h  interrupt.c  main.c
src/bsp/: CMakeLists.txt  bsp_i2c_soft.c  bsp_i2c_soft.h  bsp_uart.c  bsp_uart.h  my_bsp_config.h
src/device/: CMakeLists.txt  oled.c  oled.h  oledfont.h
syscfg/: bootloader.syscfg  mspm0g3507.lds  ti_msp_dl_config.c  ti_msp_dl_config.h
tools/: MSPM0G3507.ccxml  jlink-flash.ps1  xds-flash.ps1
